Added "eviload:<path>" command line argument that makes EVI load a module on startup.